Fix page navigation z-index to stack on top of the content. This resolves #12.

--- a/user/themes/j-theme/scss/theme.scss
+++ b/user/themes/j-theme/scss/theme.scss
@@ -81,6 +81,7 @@ footer {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1; // Stack navigation on top of content
 }
 
 #page-navigation ul {
